--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="./js/script.js" type="text/javascript"></script>
 </body>
 </html>
