--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="numbers"></div>
     <script src="./js/script.js" type="text/javascript"></script>
 </body>
 </html>
